<resources>
    <string name="app_name">Latihan7</string>
    <string name="calculate">CALCULATE</string>
    <string name="susi_calculate">SUSI CALCULATE</string>
    <string name="nilai_1">Nilai_1</string>
    <string name="nilai_2">Nilai_2</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="multiply">x</string>
    <string name="hitung">Hitung</string>
    <string name="clear">clear</string>
    <string name="hasil">Hasil</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="welcome">Selamat Datang</string>
</resources>