<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/susi_calculate"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="16dp" />
    <EditText
        android:id="@+id/edt_Nilai1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/nilai_1"
        android:textColor="@color/black"
        android:inputType="numberDecimal"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/edt_Nilai2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/nilai_2"
        android:textColor="@color/black"
        android:inputType="numberDecimal"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/btn_Plus"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/material_dynamic_secondary70" />

        <Button
            android:id="@+id/btn_Minus"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/minus"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/material_dynamic_secondary70" />
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginBottom="16dp">

        <Button
            android:id="@+id/btn_Divide"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/divide"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/material_dynamic_secondary70" />

        <Button
            android:id="@+id/btn_Multiply"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/multiply"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/material_dynamic_secondary70" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_Hitung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitung"
        android:textColor="@android:color/white"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/btn_Clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/material_dynamic_primary50"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/tv_Hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hasil"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center" />

</LinearLayout>
